feature/webappclient-4 Add service-worker

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,31 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Маркетплейс автомобильных запчастей CarPart.kz">
+    <meta name="theme-color" content="#317EFB"/>
     <title>CarPart.kz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('service-worker.js').then(function(registration) {
+            // Registration was successful
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          }, function(err) {
+            // registration failed :(
+            console.log('ServiceWorker registration failed: ', err);
+          }).catch(function(err) {
+            console.log(err)
+          });
+        });
+      } else {
+        console.log('service worker is not supported');
+      }
+    </script>
   </body>
 </html>
