--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <link rel="apple-touch-icon" href="./apple-touch-icon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+            name='viewport'
+            content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
+    />
     <meta name="description" content="Маркетплейс автомобильных запчастей CarPart.kz">
     <meta name="theme-color" content="#317EFB"/>
     <title>CarPart.kz</title>
